--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.37",
     "@babel/preset-env": "^7.0.0-beta.37",
     "@babel/preset-react": "^7.0.0-beta.37",
+    "@pixel2html/browserlist": "^1.0.0",
     "babel-plugin-dynamic-import-node-babel-7": "^2.0.3"
   },
   "peerDependencies": {
