--- a/package.json
+++ b/package.json
@@ -10,28 +10,32 @@
   "author": "Miguel Palau <mpalauzarza@gmail.com>",
   "license": "MIT",
   "files": [
-    "index.js"
+    "index.js",
+    "dependencies.js"
   ],
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.42",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.42",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.42",
-    "@babel/plugin-transform-react-constant-elements": "^7.0.0-beta.42",
-    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.42",
-    "@babel/plugin-transform-react-jsx-self": "^7.0.0-beta.42",
-    "@babel/plugin-transform-react-jsx-source": "^7.0.0-beta.42",
-    "@babel/plugin-transform-regenerator": "^7.0.0-beta.42",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "@babel/preset-react": "^7.0.0-beta.42",
-    "@pixel2html/browserlist": "^1.0.0",
-    "babel-plugin-dynamic-import-node-babel-7": "^2.0.7"
-  },
-  "peerDependencies": {
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/runtime": "^7.0.0-beta.32"
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.44",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.44",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.44",
+    "@babel/plugin-transform-classes": "7.0.0-beta.44",
+    "@babel/plugin-transform-destructuring": "7.0.0-beta.44",
+    "@babel/plugin-transform-react-constant-elements": "7.0.0-beta.44",
+    "@babel/plugin-transform-react-display-name": "7.0.0-beta.44",
+    "@babel/plugin-transform-regenerator": "7.0.0-beta.44",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.44",
+    "@babel/preset-flow": "7.0.0-beta.44",
+    "@babel/preset-react": "7.0.0-beta.44",
+    "babel-plugin-macros": "2.2.0",
+    "babel-plugin-transform-dynamic-import": "2.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.42"
+    "@pixel2html/eslint-config": "^1.5.0",
+    "eslint": "^4.19.1"
+  },
+  "eslintConfig": {
+    "extends": "@pixel2html/eslint-config"
   }
 }
