--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "dependencies.js",
-    "es6.js"
+    "dependencies.js"
   ],
   "dependencies": {
     "@babel/core": "7.0.0-beta.44",
